--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
     <meta charset="utf-8">
     <title>JSChessClock</title>
     <script src="script.js"></script>
-    <!--<link rel="stylesheet" type="text/css" href="style.css" />-->
+    <link rel="stylesheet" type="text/css" href="style.css" id="style" />
   </head>
   <body onload="init()" onresize="fitscreen()">
-    <h1>JSChessClock</h1>
-    
     <div class="clock-container">
       <svg version="1.1" width="650" height="500"
            xmlns="http://www.w3.org/2000/svg">
-        <path id="left-button-top" class="button-long" fill="#c0c0c0" 
+        <path id="left-button-top" class="button-long" fill="#c0c0c0"
               d="M 210 70 A 140 140 0 0 0 30 70 Z" stroke="#c0c0c0"
               onclick="toggle()" cursor="pointer" />
         <rect id="left-button-body" class="button-long" x="60" y="70"
@@ -43,6 +41,7 @@
         </div>
         <div class="timer" id="timer-right">15:00</div>
       </div>
+      <h1>JSChessClock</h1>
       <div class="commands">
         <div class="cmd" onclick="setTime();">[S]et time</div>
         <div class="cmd" onclick="reset();">[R]eset to previous</div>
