Add support for Fischer increment

--- a/index.html
+++ b/index.html
@@ -36,10 +36,14 @@
       <div class="timers">
         <div class="timer" id="timer-left">15:00</div>
         <div class="indicators">
-          <div id="pause">❚❚</div>
-          <div id="play">◀</div>
+          <div id="pause">⏸</div>
+          <div id="play">⏴</div>
         </div>
         <div class="timer" id="timer-right">15:00</div>
+      </div>
+      <div class="increments">
+        <div class="increment" id="increment-left">+0</div>
+        <div class="increment" id="increment-right">+0</div>
       </div>
       <h1>JSChessClock</h1>
       <div class="commands">
